nest-app/devops/k8s/area-module-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\alany\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f ../../docker-compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: area-module
  name: area-module
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: area-module
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\alany\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f ../../docker-compose.yaml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: area-module
    spec:
      containers:
        - env:
            - name: PORT
              value: "3003"
            - name: QUEUE_NAME
              value: area_queue
          image: area-module:latest
          imagePullPolicy: Never
          name: area-module
          ports:
            - containerPort: 3003
              protocol: TCP
      restartPolicy: Always
