nest-app/devops/k8s/auth-module-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: auth-module
  name: auth-module
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth-module
  template:
    metadata:
      annotations:
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: auth-module
    spec:
      containers:
        - env:
            - name: PORT
              value: "3002"
            - name: QUEUE_NAME
              value: auth_queue
            - name: PREFIX
              value: auth-module
          image: auth-module:latest
          imagePullPolicy: Never
          name: auth-module
          ports:
            - containerPort: 3002
              protocol: TCP
      restartPolicy: Always
