nest-app/devops/k8s/area-module-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\alany\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f ../../docker-compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: area-module
  name: area-module
spec:
  ports:
    - name: "3103"
      port: 3103
      targetPort: 3003
  selector:
    io.kompose.service: area-module
