nest-app/devops/k8s/auth-module-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: auth-module
  name: auth-module
spec:
  ports:
    - name: "3102"
      port: 3102
      targetPort: 3002
  selector:
    io.kompose.service: auth-module
