nest-app/devops/k8s/location-module-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\alany\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe convert -f ../../docker-compose.yaml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: location-module
  name: location-module
spec:
  ports:
    - name: "3104"
      port: 3104
      targetPort: 3004
  selector:
    io.kompose.service: location-module
