nest-app/devops/k8s/logging-module-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: logging-module
  name: logging-module
spec:
  ports:
    - name: "3105"
      port: 3105
      targetPort: 3005
  selector:
    io.kompose.service: logging-module
