nest-app/devops/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-module-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /auth-module(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-module
            port:
              number: 3002
      - path: /area-module(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: area-module
            port:
              number: 3003
      - path: /location-module(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: location-module
            port:
              number: 3004
      - path: /logging-module(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: logging-module
            port:
              number: 3005
